lb/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-site 
spec:
  selector:
    app: personal-site 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
