lb/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-site-lb
spec:
  selector:
    app: personal-site
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
  type: LoadBalancer
