lb/wai_cip.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  selector:
    app: whoami-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
