lb/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-staging
spec:
  rules:
  - host: dylanjwolff.com
    http:
      paths:
      - backend:
          serviceName: personal-site
          servicePort: 80
  - host: www.dylanjwolff.com
    http:
      paths:
      - backend:
          serviceName: personal-site
          servicePort: 80
  - http:
      paths:
      - backend:
          serviceName: whoami
          servicePort: 80
  tls:
    - hosts:
        - www.dylanjwolff.com
        - dylanjwolff.com
      secretName: personal-site-tls
